--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.MarinaIndustri"
         tools:targetApi="31">
         <activity
+            android:name=".BerandaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DaftarSuksesActivity"
+            android:exported="false" />
+        <activity
             android:name=".DaftarActivity"
             android:exported="false" />
         <activity
