--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.MarinaIndustri"
         tools:targetApi="31">
         <activity
+            android:name=".NotifikasiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CheckoutBerhasilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CheckoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".KeranjangKosongActivity"
+            android:exported="false" />
+        <activity
             android:name=".KeranjangActivity"
             android:exported="false" />
         <activity
