--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,14 @@
             android:exported="false" />
         <activity
             android:name=".BerandaActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".MasukActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
