--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:exported="false">
         </activity>
         <activity
+            android:name=".DaftarActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".MasukActivity"
             android:exported="false">
         </activity>
